--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <a class="footer-item" href="#">Contáctanos</a>
             <a class="footer-item" href="#">Prensa</a>
             <a class="footer-item" href="#">Conferencias</a>
-            <a class="footer-item" href="#">Términos y condiciones</a>
+            <a class="footer-item" href="#">Terminos y condiciones</a>
             <a class="footer-item" href="#">Privacidad</a>
             <a class="footer-item" href="#">Esdudiantes</a>
         </div>
